Change Japanese label to avoid overflow

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,9 +1,7 @@
 #smart_rule_editor_container, #rule_editor_container {
   all: initial;
-  color: red!important;
   * {
   	all: initial;
-  	background-color: red!important;
   }
   
   div {
@@ -12,5 +10,4 @@
   
 }
 #rule_editor_container div {
-	color:red!improtant;
 }
